force-app/main/default/objects/Consumer__c/Consumer__c.object-meta.xml
<CustomObject>
    <description>This object is used to store Home Care Consumer records</description>
    <label>Consumer</label>
    <nameField>
        <label>Consumer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Consumers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>