force-app/main/default/objects/Consumer__c/fields/CCA_Consumer_ID__c.field-meta.xml
<CustomField>
    <fullName>CCA_Consumer_ID__c</fullName>
    <description>CCA ID for the Consumer</description>
    <label>Empower Consumer ID</label>
    <type>TextArea</type>
</CustomField>