force-app/main/default/objects/Consumer__c/fields/Check_Enrollment__c.field-meta.xml
<CustomField>
    <fullName>Check_Enrollment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Check Enrollment</label>
    <type>Checkbox</type>
</CustomField>