force-app/main/default/objects/Consumer__c/fields/CLTCEC_ID__c.field-meta.xml
<CustomField>
    <fullName>CLTCEC_ID__c</fullName>
    <description>This field is used in Form Assembly</description>
    <label>CCA ID - FA</label>
    <length>200</length>
    <type>Text</type>
</CustomField>