force-app/main/default/objects/Consumer__c/fields/Other_Power_of_Attorney_POA__c.field-meta.xml
<CustomField>
    <fullName>Other_Power_of_Attorney_POA__c</fullName>
    <description>This field will auto populate the text on Informed Consent form</description>
    <label>Other Power of Attorney (POA)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>