force-app/main/default/objects/Consumer__c/fields/Power_of_Attorney_POA__c.field-meta.xml
<CustomField>
    <fullName>Power_of_Attorney_POA__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field will auto populate the Provider Name on Informed Consent form</description>
    <label>Power of Attorney (POA)</label>
    <type>Checkbox</type>
</CustomField>