force-app/main/default/objects/Consumer__c/fields/Provider__c.field-meta.xml
<CustomField>
    <fullName>Provider__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Provider</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Consumers</relationshipLabel>
    <relationshipName>Consumers</relationshipName>
    <type>Lookup</type>
</CustomField>