force-app/main/default/objects/Consumer__c/fields/Why_Consumer_can_t_sign_Form__c.field-meta.xml
<CustomField>
    <fullName>Why_Consumer_can_t_sign_Form__c</fullName>
    <label>Why Consumer can&apos;t sign Form</label>
    <length>255</length>
    <type>Text</type>
</CustomField>