force-app/main/default/objects/Consumer__c/fields/Work_Phone_del__c.field-meta.xml
<CustomField>
    <fullName>Work_Phone_del__c</fullName>
    <description>This field is required to update the Form Assembly fields</description>
    <label>FA Work Phone</label>
    <type>Phone</type>
</CustomField>