force-app/main/default/objects/Consumer__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Gender__c</columns>
    <columns>Qualified__c</columns>
    <columns>Qualification_Type__c</columns>
    <columns>Age__c</columns>
    <columns>Address__c</columns>
    <columns>Apt_Suite_Unit__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>